--- a/app/src/main/res/layout/activity_humidity.xml
+++ b/app/src/main/res/layout/activity_humidity.xml
@@ -147,7 +147,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:ems="10"
                 android:inputType="number|none" />
         </TableRow>
